# upsert-pandas

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/workflows/: publish-to-pypi-uv.yml
docs/: .readthedocs.yaml  index.en.md  index.pt.md
docs/pages/: function.md  install.md  test.en.ipynb  using.md
docs/scripts/: test.ipynb
upsert_pandas/: __init__.py  main.py
