[project]
name = "upsert-pandas"
version = "0.0.1"
description = "ssss"
readme = "README.md"
requires-python = ">=3.11"
keywords = ['pandas', 'upsert']
dependencies = [
    "pandas>=2.0.0",
    # "requests>=2.32.5",
    #"requests-cache>=1.2.1",
    #"tabula-py>=2.10.0",
]

[dependency-groups]
dev = ["notebook>=7.5.3"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[imaging]>=9.7.1",
]
